major refactor changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <!-- Compiled and minified CSS -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
+    /> -->
     <!--Import fontawesome icon-->
     <link
       rel="stylesheet"
@@ -27,7 +27,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
   </body>
   </body>
 </html>
